# foo

./: README.md  meson.build
include/: bar.hh  foo.hh  meson.build
src/: bar.cc  foo.cc  meson.build
tests/: meson.build  mytest.cc
